using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant 
{
    public const string ANIM_IDLE = "idle";
    public const string ANIM_ATTACK = "attack";
    public const string ANIM_DIE = "die";
    public const string ANIM_RUN = "run";
    public const string ANIM_SLASH = "slash";

    public const string TAG_HERO = "Hero";
    public const string TAG_ENEMY = "Enemy";
    public const string TAG_WALL = "Wall";
}
